# ISM-Trash-AI-Project

./: README.md  ism_trash_tool.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: imghdr.py  ism_trash_tool.py  run_app.py
