[project]
name = "ism-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Sohan Subudhi",email = "85711413+SohanSubudhi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (==1.19.0)",
    "streamlit-image-select (==0.6.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "altair (>=4.0,<5.0)",
    "filetype (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ism_tool", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
